@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3548 utf-8
+personal_ws-1.1 en 3550 utf-8
 AAC
 AAS
 ABI
@@ -2133,6 +2133,7 @@ getconf
 getent
 getenv
 getopt
+getproctag
 gettext
 gettextize
 getvar
@@ -3040,6 +3041,7 @@ setflags
 setgid
 setinfo
 setpci
+setproctag
 setq
 setuid
 setupCommands
