@@ -39,6 +39,10 @@ https://github.com/networkupstools/nut/milestone/12
  - (expected) CI automation for use of data points in drivers that conform
    to patterns defined in link:docs/nut-names.txt[]
 
+ - common code:
+   * Introduced `setproctag()` and `getproctag()` (see examples in `upsmon`)
+     to help track the log messages from massively-forking NUT daemons. [#3084]
+
  - `nutdrv_qx` driver updates:
    * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
      code (mapping table) and the data found from device walk sit together
